# G10COS498_AiUseTutor

./: #MAIN Group 10 Draft of Agent Project Specification and Planning Document_Assignment.md  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  pyproject.toml
.githooks/: pre-commit
04-21-2026/: Iteration Report (due Friday by end of day).md  Outstanding Feedback.md  Summarized Feedback.md  Updated Iteration Report for v2.1.md
04-23-2026/: Iteration Report.md  feedback.md
Experiment Results/: agent-4-16-2026-05-14T18-20Z-results.json  agent-4-16-2026-05-14T18-20Z-summary.md  agent-final-2026-05-14T18-20Z-results.json  agent-final-2026-05-14T18-20Z-summary.md  final-agent-2026-05-14T18-15Z-results.json  final-agent-2026-05-14T18-15Z-summary.md  real-human-intrinsic-2026-05-14T19-13Z-results.json  real-human-intrinsic-2026-05-14T19-13Z-summary.md  real-human-intrinsic-2026-05-14T19-15Z-results.json  real-human-intrinsic-2026-05-14T19-15Z-summary.md
docs/: architecture.md  content-map.md  final-vs-4-16-comparison.md  pedagogical-model.md  roadmap.md  sphere-card-intrinsic.json  technical-report.md
evaluation/: AIAgents_S26_SAGE-V2.ipynb  AIAgents_S26_SAGE.ipynb  README.md  intrinsic-evaluation.md  run_all.sh  run_evaluation.py
memory/: MEMORY.md  feedback_no_name_request.md
sage/: __main__.py  agent.py  app.py  components.py  export.py  prompts.py  session_store.py  skill_loader.py  tools.py  ui.py
sage_tutor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build_prompts.py
workflows/: assessment-flow.md  (+4 more)
(+386 files in other folders)
